--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ canvas {
 }
 #focusDisplay {
   padding: 20px 10px;
-  display: block;
+  display: none;
   border-left: solid;
   border-color: rgba(255, 255, 255, .3);
   border-radius: 1px;
