--- a/style.css
+++ b/style.css
@@ -1,494 +1,87 @@
-html {
-  font-family: 'Proxima Nova Rgular', sans-serif;
-}
 body {
-  min-width: 1300px;
-  background-color: black;
-  color: #DDD;
-  overflow: hidden;
+  background-color: white;
 }
-body.light {
-  background-color: rgb(232, 232, 232);
-  color: #333;
-}
-body.light #focusDisplay {
-  background-color: rgb(230, 230, 230);
-  border-color: rgba(0, 0, 0, .3);
-}
-.light #focusDisplayTag {
-  color: #333;
-  border-color: rgba(0, 0, 0, .3);
-}
-.light #focusDisplayTag:hover {
-  color: #AAA;
-}
-canvas {
-  margin: 50px 50px 0;
-  border: 1px solid #333;
-}
-#instructions {
-  margin-left: 120px;
-  margin-top: 60px;
-}
-#options {
+
+div {
   position: absolute;
-  left: 10px;
-  top: 30px;
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  background-color: #CCC;
-  text-align: center;
-  vertical-align: middle;
-  line-height: 60px;
-  color: #333;
-  z-index: 100;
-  opacity: 0.2;
-  -webkit-transition: opacity .5s;
-  /* Safari */
-  transition: opacity .5s;
+	margin-left: 200px;
+	margin-right: 200px;
+	margin-top: 100px;
 }
-#options.clear {
-  opacity: 1;
+
+.adiv {
+  top: 0;
+  right: 0;
+  z-index: 2;
 }
-#options:hover {
-  opacity: 1;
+
+.bdiv {
+  top: 500;
+  margin-top: 0;
+  z-index: 1;
 }
-#options span {
-  position: absolute;
-  left: 15px;
-  top: 20px;
+
+#b0 {
+  top: 175;
 }
-#options:hover {
-  background: white;
-  color: black;
-  -webkit-transition: all ease-out .5s;
-  -moz-transition: all ease-out .5s;
-  -o-transition: all ease-out .5s;
-  transition: all ease-out .5s;
+
+#b1 {
+  top: 385;
 }
-/*#options:active + #interface,#options:hover + #interface, #interface:hover{
-	display: block;
+
+#b2 {
+  top: 565;
+}
+
+/*p {
+  font: 20px/30px Georgia, "Times New Roman", Times, serif;
 }
 */
-
-#interface {
-  top: 10px;
-  left: 0px;
-  position: absolute;
-  background: rgb(0, 0, 0);
-  padding: 10px 20px 20px 120px;
-  width: 420px;
-  border: 1px solid #555;
-  display: none;
+h1 {
+  font: 30px/40px Georgia, "Times New Roman", Times, serif;
 }
-#focusDisplayWrapper {
-  position: absolute;
-  bottom: 50px;
+
+.b_file {
   top: 0;
-  overflow: hidden;
-  right: 0px;
-  width: 260px;
-  height: 100%;
-}
-#focusDisplay {
-  padding: 20px 10px;
-  display: none;
-  border-left: solid;
-  border-color: rgba(255, 255, 255, .3);
-  border-radius: 1px;
-  height: 95%;
-  background-color: black;
-}
-#focusDisplayTag {
-  color: #DDD;
-  padding: 10px;
-  line-height: 24px;
-  border-left: solid;
-  border-color: rgba(255, 255, 255, .3);
-}
-#focusDisplayTag #closeButton {
-  font-size: 24px;
-  line-height: 24px;
-}
-#focusDisplayTag:hover {
-  color: white;
-}
-#status {
-  width: 15px;
-  display: inline-block;
-}
-#focusDisplay span {
-  opacity: .5;
-  margin-left: 10px;
-}
-#focusDisplay span:hover {
-  opacity: .9;
-}
-#focusDisplay p {
-  font-family: monospace;
-  margin: 0 0 15px 0;
-  white-space: pre-wrap;
-}
-@media only screen and (min-width: 1550px) {
-  #focusDisplay, #focusDisplayTag {
-    border-color: rgba(255, 255, 255, 0) !important;
-    background-color: rgba(255, 255, 255, .15) !important;
-  }
-  .light #focusDisplay, .light #focusDisplayTag {
-    border-color: rgba(255, 255, 255, 0) !important;
-    background-color: rgba(0, 0, 0, .05) !important;
-  }
-}
-@media only screen and (min-width: 1800px) {
-  #focusDisplayWrapper{
-   position:fixed;
-   left:1380px;
-  }
-  }
-.select {
-    overflow: hidden;
-    display: inline-block;
-    position: relative;
-    height: 29px;
-    margin: 0px 10px;
-
-}
-.reader .select {
-  height:22px;
-  margin:0px 10px;
-}
-.reader select {
-  font-size: 12px;
-  padding: 4px 10px 4px 5px;
-  height: 22px;
-}
-select {
-  font-size: 14px;
-  padding: 6px 10px 6px 5px;
-  height: 29px;
-
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  /* remove default arrow */
-  background: transparent;
-  background-color: #3D3D3D;
-  border: none;
-  letter-spacing: 0.06em;
-
-  border-radius: 0px;
-  background-color: #3D3D3D;
-  color:#DDD;
-}
-.reader .select:after {
-   font-size:8px;
-   padding: 8px;
-}
-.select:after {
-    font-size:10px;
-    width:15px;
-    padding: 10px 5px 6px 0px;
-    content:" \25BC";
-    color:#AAA;
-    opacity: .5;
-    position: absolute;
-    right: 5px;
-    top: 0;
-    z-index: 1;
-    text-align: center;
-    height: 100%;
-    pointer-events: none;
-    box-sizing: border-box;
-}
-select:focus {
-  outline:none;
-}
-button {
-  background-color: black;
-  border: 2px solid #DDD;
-  color: white;
-  text-transform: uppercase;
-  letter-spacing: 0.06em;
-  font-size: 16px;
-  padding: 5px 0;
-  width: 390px;
-  line-height: 20px;
-  margin-top: 10px;
-}
-select, .smallButton label {
-  background-color: #2D2D2D;
-  color:#7a7a7a;
-}
-.smallButton label {
-  display: inline-block;
-  font-size: 14px;
-  padding: 5px 7px 3px;
-  margin-right: 10px;
-}
-.smallButton input {
-  display: none;
+  right: 0;
 }
 
-.item {
-  display: inline-block;
-}
-.item p {
-  width: 60px;
-  position: absolute;
-}
-.item select {
-  width: 340px;
-  margin-left: 60px;
-}
-.item select.half, .item .select.half {
-  width: 130px;
-}
-.reader {
-  height: 22px;
-  margin: 30px 0;
-}
-.reader.disabled {
-  opacity:.3;
-  color:#AAA !important;
-  -webkit-filter: grayscale(1);
-}
-.reader.disabled > label, .reader.disabled p, .reader.disabled .select, .reader.disabled .smallButton.focus {
-    pointer-events: none;
-}
-.reader.disabled select{
-  color:#AAA !important;
-}
-/*.reader div {
-  padding-left: 10px;
-  font-size: 16px;
-  display: inline-block;
-}*/
-.reader .select, .reader .smallButton{
-  float: right;
-  display:none;
-}
-.reader input {
-  display: none;
-}
-.reader > label {
-  width:22px;
-}
-.reader > label:before {
-  content: '';
-  display: inline-block;
-  width: 18px;
-  height: 18px;
-  border-radius: 18px;
-  margin: 0 10px -5px 0;
-  border: 2px solid gray;
-}
-.reader > input:checked+ label:hover:before {
-  border-color: #EEE !important;
-}
-.reader > input:checked+ label:hover:before {}
-.reader:hover #hoverTextWrapper.hover {
-  display: block;
-}
-.reader:not(.disabled) > input:checked+ label:before {
-  border-color: rgba(0, 0, 0, 0);
-}
-.reader p {
-  color: #EEE;
-}
-#options, #interface, #focusDisplayTag{
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+span {
+  font: 20px/30px Georgia, "Times New Roman", Times, serif;
   cursor: default;
 }
 
-/* Reader Color Scheme */
-
-.reader > input+ label:before {
-  /* fake*/
-  transition: background-color .5s;
-}
-.smallButton input:checked + label {
-  background-color: white;
-  color:black;
-}
-.reader:not(.disabled)#MesosticReader input:checked + label:before{
-  background-color: #0095FF;
-}
-.reader:not(.disabled)#MesosticJumper input:checked + label:before{
-  background-color: #0095FF;
-}
-.reader:not(.disabled)#PerigramReader input:checked + label:before{
-  background-color: #FA0007;
-}
-.reader:not(.disabled)#ObliquePerigramReader input:checked + label:before{
-  background-color: #FF41B6;
-}
-.reader:not(.disabled)#SpawningSimpleReader input:checked + label:before{
-  background-color: #F3F100;
-}
-.reader:not(.disabled)#SpawningPerigramReader input:checked + label:before{
-  background-color: #FF5100;
+.text {
+  color: rgba(0,0,0,0);
+  transition: color 2s ease-in-out;
 }
 
-.reader#MesosticReader input+ label:hover:before {
-  border-color: #0095FF;
-}
-.reader#MesosticJumper input+ label:hover:before {
-  border-color: #0095FF;
-}
-.reader#PerigramReader input+ label:hover:before {
-  border-color: #FA0007;
-}
-.reader#ObliquePerigramReader input+ label:hover:before {
-  border-color: #FF41B6;
-}
-.reader#SpawningSimpleReader input+ label:hover:before {
-  border-color: #F3F100;
-}
-.reader#SpawningPerigramReader input+ label:hover:before {
-  border-color: #FF5100;
+.text.a {
+  color: rgba(0,0,0,255);
 }
 
-.reader.focused#MesosticReader input:checked+ label:before {
-  box-shadow: 0px 0px 15px 5px #0095FF;
-}
-.reader.focused#MesosticJumper input:checked+ label:before {
-  box-shadow: 0px 0px 15px 5px #0095FF;
-}
-.reader.focused#PerigramReader input:checked+ label:before {
-  box-shadow: 0px 0px 15px 5px #FA0007;
-}
-.reader.focused#ObliquePerigramReader input:checked+ label:before {
-  box-shadow: 0px 0px 15px 5px #FF41B6;
-}
-.reader.focused#SpawningSimpleReader input:checked+ label:before {
-  box-shadow: 0px 0px 15px 5px #F3F100;
-}
-.reader.focused#SpawningPerigramReader input:checked+ label:before {
-  box-shadow: 0px 0px 15px 5px #FF5100;
+.text.b {
+  color: rgba(0,0,0,0);
 }
 
-/*
-.reader.focused#ObliqueSpawner input:checked + label:before {
-    box-shadow: 0px 0px 15px 5px #FFD000;
-}
- */
+/*.text.a:hover {
+  color: rgba(0,0,0,0);
+}*/
 
-.reader:not(.disabled) > input:checked~ .select, .reader:not(.disabled) > input:checked~ .smallButton {
-  display: inline-block;
-}
+/*.text.b:hover {
+  color: rgba(0,0,0,255);
+}*/
 
-#interface p {
-  display: inline-block;
-  letter-spacing: 0.03em;
-  font-size: 16px;
-  margin: 0px;
-}
-#interface .item p {
-  margin-top: 6px;
+/*.text.alwaysOn {
+  color: rgba(0,0,0,255);
 }
 
+#readable {
+  color: rgba(0,0,0,255);
+}
 
-/*customized select with ul li */
+#invisible {
+  color: rgba(0,0,0,0);
+}*/
 
-.item {
-  height: 29px;
-  margin-bottom: 20px;
-}
-ul.select {
-  list-style-type: none;
-  height: 30px;
-  width: 320px;
-  -webkit-padding-start: 0px;
-  display: inline-block;
-  margin-right: 20px;
-}
-ul.select li {
-  padding: 7px 10px;
-  font-size: 14px;
-  font-weight: bold;
-  letter-spacing: 0.06em;
-  color: #DDD;
-  border: none;
-  width: 300px;
-}
-ul.select.half li {
-  width: 100px;
-}
-ul.select li.init {
-  z-index: 0;
-  background-color: #3D3D3D;
-}
-ul.select li:not(.init) {
-  z-index: 50;
-  float: left;
-  display: none;
-  background-color: #AAA;
-  color: black;
-}
-ul.select li:not(.init).selected {
-  color: white;
-}
-ul.select li:not(.init):hover {
-  background: gray;
-}
-.tag {
-  position: absolute;
-  width: 100px;
-  text-align: center;
-  text-transform: uppercase;
-  margin: -30px auto 0;
-  left: 0;
-  right: 0;
-  opacity: .0;
-}
-#overlay {
-  position: fixed;
-  background-color: rgba(0, 0, 0, .7);
-  width: 100%;
-  height: 100%;
-  top: 0;
-  z-index: 100;
-  opacity: 1;
-  display: block;
-  transition: opacity 2s;
-}
-#overlay.fade {
-  opacity: 0;
-  height: 0;
-}
-#loader {
-  border: 12px solid #333;
-  /* Light grey */
-  border-top: 12px solid #f3f3f3;
-  /* Blue */
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
-  position: absolute;
-  margin: 300px auto 0;
-  left: 0;
-  right: 0;
-  animation: spin 2s linear infinite;
-  opacity: .7;
-}
-#overlay p {
-  position: absolute;
-  margin: 370px auto 0;
-  width: 200px;
-  height: 20px;
-  line-height:24px;
-  left: 0;
-  right: 0;
-  text-align: center;
-}
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
+
