--- a/test/style.css
+++ b/test/style.css
@@ -1,18 +1,38 @@
 body {
   background-color: white;
 }
+/* Menu Style */
+.menu ul{
+  list-style: none;
+}
+.menu ul li {
+  display: inline-block;
+  padding:0px 20px;
+}
+.menu ul li:hover{
+  color:red;
+}
 #content {
   width: 800px;
   margin:40px 10vw;
 }
+
 .page, .adiv, .bdiv{
   width:100%;
 }
-.bdiv {
+.page {
   display:none;
 }
-.adiv span:hover{
-  opacity:0;
+.page.current {
+  display:block;
+}
+
+.unit{
+  background-color: #DDD;
+}
+
+.adiv p > span:hover{
+  opacity:0.2;
   transition:opacity, 1s;
 }
 div {
@@ -28,51 +48,17 @@ div {
   z-index: 2;
 }
 
-.bdiv {
-  top: 500;
+.bdiv p > span{
+  display: none;
+  position:fixed;
+  right:0;
+  width:300px;
   margin-top: 0;
   z-index: 1;
 }
 
-#b0 {
-  top: 175;
-}
-
-#b1 {
-  top: 385;
-}
-
-#b2 {
-  top: 565;
-}
-
-/*p {
-  font: 20px/30px Georgia, "Times New Roman", Times, serif;
-}
-*/
-h1 {
-  font: 30px/40px Georgia, "Times New Roman", Times, serif;
-}
-
-.b_file {
-  top: 0;
-  right: 0;
-}
 
 span {
   font: 20px/30px Georgia, "Times New Roman", Times, serif;
   cursor: default;
-}
-
-.text {
-  color: rgba(0,0,0,0);
-  transition: color 2s ease-in-out;
-}
-
-.text.a {
-  color: rgba(0,0,0,255);
-}
-
-.text.b {
-  color: rgba(0,0,0,0);
 }
