--- a/test/style.css
+++ b/test/style.css
@@ -1,9 +1,28 @@
 body {
   background-color: white;
+  font: 20px/30px Georgia, "Times New Roman", Times, serif;
+  cursor: default;
+}
+span {
+  white-space:pre-line;
+}
+p {
+  margin-top:0px;
+}
+#getTextWidth {
+   position: absolute;
+   visibility: hidden;
+   height: auto;
+   width: auto;
+   white-space: pre; /* Thanks to Herb Caudill comment */
 }
 /* Menu Style */
+.menu {
+  margin: 20px 0 0 150px;
+}
 .menu ul{
   list-style: none;
+  margin-bottom: 20px;
 }
 .menu ul li {
   display: inline-block;
@@ -12,15 +31,31 @@ body {
 .menu ul li:hover{
   color:red;
 }
-#content {
-  width: 800px;
-  margin:40px 10vw;
-}
-
-.page, .adiv, .bdiv{
+/* End of Menu Style */
+.page, .adiv, .bdiv, #overlay{
   width:100%;
 }
+/* #hover span {
+  position:absolute;
+  white-space: pre;
+} */
+#content{
+  width: 800px;
+  position: relative;
+	margin-left: 200px;
+	margin-right: 200px;
+	margin-top: 20px;
+}
+
+.adiv, .bdiv, #overlay{
+  position:absolute;
+  top: 0;
+  left: 0;
+  padding:0;
+}
+
 .page {
+  position:inherit;
   display:none;
 }
 .page.current {
@@ -28,37 +63,45 @@ body {
 }
 
 .unit{
-  background-color: #DDD;
+  /* background-color: #DDD; */
 }
-
-.adiv p > span:hover{
+span.anchor {
+  color:green !important;
+}
+/* p > span {
+  display: inline-block;
+} */
+.adiv p > span.tb:hover, .adiv p > span.unit:hover{
   opacity:0.2;
   transition:opacity, 1s;
 }
-div {
-  position: absolute;
-	margin-left: 200px;
-	margin-right: 200px;
-	margin-top: 100px;
+
+.adiv p > span:hover .shared{
+  color:orange;
 }
 
-.adiv {
-  top: 0;
-  right: 0;
+.adiv{
   z-index: 2;
 }
+.bdiv {
+  z-index:1;
+}
 
+/* .bdiv span {
+  display:
+} */
+.bdiv p > span {
+  opacity: 0;
+}
+.adiv p > span {
+  opacity: 1;
+}
+/*
 .bdiv p > span{
   display: none;
   position:fixed;
   right:0;
-  width:300px;
   margin-top: 0;
   z-index: 1;
-}
-
-
-span {
-  font: 20px/30px Georgia, "Times New Roman", Times, serif;
-  cursor: default;
-}
+  width:800px;
+} */
