--- a/test/style.css
+++ b/test/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: white;
+  color:#444;
   font: 20px/23px Georgia, "Times New Roman", Times, serif;
   cursor: default;
 }
@@ -74,6 +75,7 @@ span.anchor {
 .adiv p > span.tb:hover, .adiv p > span.unit:hover{
   opacity:0.2;
   transition:opacity, 1s;
+  transition-delay: 1s;
 }
 
 .adiv p > span:hover .shared{
@@ -96,6 +98,23 @@ span.anchor {
 .adiv p > span {
   opacity: 1;
 }
+#beforeAnchorA {
+  opacity: 0;
+}
+#overlay {
+  opacity:0;
+}
+/* #overlay {
+  top:500px;
+  display: flex;
+  flex-wrap: wrap-reverse;
+  direction: rtl;
+  justify-content: flex-end;
+}
+#beforeAnchor {
+flex-direction: row-reverse ;
+
+} */
 /*
 .bdiv p > span{
   display: none;
