--- a/test/style.css
+++ b/test/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: white;
   color:#444;
-  font: 20px/23px Georgia, "Times New Roman", Times, serif;
+  font: 24px/27px Garamond, Georgia, "Times New Roman", Times, serif;
   cursor: default;
   -webkit-user-select: none; /* Safari */
   -moz-user-select: none; /* Firefox */
