--- a/test/style.css
+++ b/test/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: white;
   color:#444;
-  font: 24px/27px Garamond, Georgia, "Times New Roman", Times, serif;
+  font-family: Garamond, Georgia, "Times New Roman", Times, serif;
   cursor: default;
   -webkit-user-select: none; /* Safari */
   -moz-user-select: none; /* Firefox */
@@ -13,6 +13,7 @@ span {
 }
 p {
   margin-top:0px;
+  width: auto;
 }
 
 #getTextWidth {
@@ -26,6 +27,8 @@ p {
 /* Menu Style */
 .menu {
   margin: 20px 0 0 150px;
+  position:absolute;
+  top:0;
 }
 .menu ul{
   list-style: none;
@@ -53,11 +56,7 @@ p {
   padding:0;
 }
 #content{
-  width: 800px;
   position: relative;
-	margin-left: 200px;
-	margin-right: 200px;
-	margin-top: 20px;
 }
 .page {
   position:inherit;
@@ -89,12 +88,6 @@ p {
 }
 
 /* Animation related CSS */
-/* Shared span change to orange color in 0.5s */
 .active .shared{
   cursor: pointer;
 }
-
-/* Current anchor color */
-/* span.anchor {
-  color:green !important;
-} */
