--- a/test/style.css
+++ b/test/style.css
@@ -26,7 +26,8 @@ p {
 
 /* Menu Style */
 .menu {
-  margin: 20px 0 20px 200px;
+  margin: 60px 0 20px 80px;
+  font-size: 20px;
   position:absolute;
   top:0;
 }
